learned some topics in css

--- a/prac.html
+++ b/prac.html
@@ -93,7 +93,7 @@
         <p class="wish">this is happy ending..for 2025</p>
         <p class="wish">everything is a lesson and god gifted</p>
     </div> -->
-    <form action="" class="form">
+    <!-- <form action="" class="form">
         <fieldset>
             <legend>Personal-info</legend>
 
@@ -119,6 +119,43 @@
 
             <button type="button" class="submit">submit</button>
         </fieldset>
-    </form>
+    </form> -->
+
+    <!-- <div>
+        <p>Hello World! wake up to reality!!!</p>
+    </div> -->
+
+    <!-- <div class="a">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
+    </div><br>
+    <div class="b">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
+    </div><br>
+    <div class="c">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
+    </div><br>
+    <div class="d">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
+    </div><br>
+    <div class="e">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
+    </div><br>
+    <div class="f">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
+    </div> -->
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, et.</p>
+    </div>
+
+
+
+
 </body>
 </html>
