added some practiced code

--- a/prac.html
+++ b/prac.html
@@ -150,11 +150,38 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id iusto tenetur quo nemo, molestias voluptatum vel est aliquam veritatis excepturi sequi nostrum quibusdam obcaecati?</p>
     </div> -->
 
-    <div>
+    <!-- <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, et.</p>
-    </div>
+    </div> -->
 
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, exercitationem? <a href="facebook.com">fackebook</a></p> -->
 
+    <table style="width: 50%; height: 50%;  border: 2px solid black;">
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>location</th>
+            <th>designation</th>
+        </tr>
+        <tr>
+            <td>srinath</td>
+            <td>23</td>
+            <td>nizamabad</td>
+            <td>software</td>
+        </tr>
+        <tr>
+            <td>ravi</td>
+            <td>25</td>
+            <td>armoor</td>
+            <td>registrate</td>
+        </tr>
+        <tr>
+            <td>srikanth</td>
+            <td>24</td>
+            <td>hyderbad</td>
+            <td>Business</td>
+        </tr>
+    </table>
 
 
 </body>
