--- a/prac.html
+++ b/prac.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
     <link rel="stylesheet" href="prac.css">
+    <script src="prac.js" defer></script>
 </head>
 <body>
 
@@ -156,7 +157,7 @@
 
     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, exercitationem? <a href="facebook.com">fackebook</a></p> -->
 
-    <table style="width: 50%; height: 50%;  border: 2px solid black;">
+    <!-- <table style="width: 50%; height: 50%;  border: 2px solid black;">
         <tr>
             <th>Name</th>
             <th>Age</th>
@@ -181,8 +182,12 @@
             <td>hyderbad</td>
             <td>Business</td>
         </tr>
-    </table>
+    </table> -->
 
+    <h1>This is Heading Tag</h1>
+
+    <p id="demo">the paragraph</p>
+    <button type="button" onclick="my_function()">submit</button>
 
 </body>
 </html>
